@@ -38,9 +38,6 @@
 namespace VSTGUI {
 
 //-----------------------------------------------------------------------------
-IBitmapReaderCreator* IPlatformBitmap::gCustomBitmapReaderCreator = 0;
-
-//-----------------------------------------------------------------------------
 // CBitmap Implementation
 //-----------------------------------------------------------------------------
 /*! @class CBitmap
